--- a/source/sass/block/_proposals.scss
+++ b/source/sass/block/_proposals.scss
@@ -59,6 +59,7 @@
     opacity: 0.5;
     right: 25px;
     top: 24px;
+    fill: #149080;
   }
 
   .proposals__link--toys svg {
@@ -66,6 +67,7 @@
     opacity: 0.5;
     right: 26px;
     top: 20px;
+    fill: #149080;
   }
 
   .proposals__link--interior,
