--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,7 @@
 @import "block/_heading";
 @import "block/_main-nav";
 @import "block/_modal";
+@import "block/_overlay";
 @import "block/_page-top";
 @import "block/_proposals";
 @import "block/_product-card";
