--- a/source/sass/block/_catalog.scss
+++ b/source/sass/block/_catalog.scss
@@ -1,6 +1,6 @@
 
 .catalog {
-  padding-bottom: 55px;
+  margin-bottom: 55px;
 
   .catalog__heading {
     @include container;
@@ -26,7 +26,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding-bottom: 63px;
+    margin-bottom: 63px;
 
     .catalog__list {
       margin-top: 66px;
@@ -41,7 +41,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-bottom: 105px;
+    margin-bottom: 105px;
 
     .catalog__list {
       display: flex;
