--- a/source/sass/block/_social-list.scss
+++ b/source/sass/block/_social-list.scss
@@ -2,15 +2,13 @@
   display: flex;
   flex-direction: row;
   list-style: none;
-  padding-top: 14px;
-  padding-bottom: 23px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  padding-left: 57px;
-  padding-right: 57px;
   align-items: center;
+  padding: 10px 58px 23px;
 
   .social-list__item:not(:last-child) {
-    margin-right: 38px;
+    margin-right: 40px;
+    display: inline-block;
   }
 
   .social-list__item svg {
@@ -23,16 +21,20 @@
     }
   }
 
+  .social-list__link {
+    display: block;
+  }
+
   @media (min-width: $tablet-width) {
     margin-top: 0;
-    margin-left: 104px;
+    margin-left: 160px;
     border-bottom: none;
-    padding-top: 0;
-    padding-bottom: 42px;
+    padding: 0;
+    margin-bottom: 62px;
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 293px;
+    margin-left: 350px;
     padding-top: 0;
   }
 }
